fixed width of image details on mobile

--- a/components/pages/gallery/Details.module.css
+++ b/components/pages/gallery/Details.module.css
@@ -5,7 +5,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  min-width: min(500px, calc(100vw - 1rem));
+  width: min(500px, calc(100vw - 1rem));
 }
 
 .container p {
